Fixes to introduction

--- a/Non-essentialist, activity-grounded lifeforms.tex
+++ b/Non-essentialist, activity-grounded lifeforms.tex
@@ -38,28 +38,39 @@ In this chapter, I argue instead for an activity-grounded conception of lifeform
 
 \section{Introduction}
 
-In action-theoretic \dash and, broadly speaking, biological \dash contexts, lifeforms are invoked in order to explain, in various ways, what a thing does.\footnote{I use the term \enquote{lifeform} here \dash a term that Spinoza never uses \dash because this chapter is ultimately concerned with the action-theoretic context. To the extent to which my reading works for lifeform, though, it should extend more or less straightforwardly to certain senses of \enquote{species}, and somewhat less straightforwardly, \enquote{form} \dash terms that Spinoza does \emph{occasionally} use in appropriate contexts.}
-Humans do what they do, in the ways that they do, because of an underlying lifeform. Ants do very different things, very differently, from us because their lifeform differs significantly from ours. The lifeform is the background against which actions make sense. It makes a lot of sense for a human to, say, change a light bulb; for an ant, that would be a little strange. This can be cashed out in various ways \dash in terms of the role of artificial light in current human life, in terms of our opposable thumbs that allow us to actually get hold of the thing to change it, and so on. In these contexts, when we talk about lifeforms, we talk about them as the grounds of actions.
+In action-theoretic \dash and, broadly speaking, biological \dash contexts, lifeforms are invoked in order to explain, in various ways, what a thing does.
+Humans do what they do, in the ways that they do, because of an underlying lifeform. Ants do very different things, very differently, from us because their lifeform differs significantly from ours. The lifeform is the background against which actions make sense: it makes a lot of sense for a human to, say, change a light bulb; for an ant, that would be a little strange. This can be cashed out in various ways \dash in terms of the role of artificial light in current human life, in terms of our opposable thumbs that allow us to actually get hold of the thing to change it, and so on. In these contexts, when we talk about lifeforms, we talk about them as the grounds of actions.
 
-There are some good reasons to see something like this lifeform concept as being at work in Spinoza's system, especially when he makes claims such as, \textquote[E4App\RN{9}]{\textins*{n}othing can agree more with the nature of any thing than other individuals of the same species}, or many of his references to \enquote{form}. But Spinoza endorses gradualism about bodies: there are no hard boundaries between natural kinds, and no ontological resources to institute them. So there is some puzzle about the role of these notions in what we might broadly, and inaccurately, call Spinoza's philosophy of action that warrants addressing. That's an issue of what the notion of lifeform can do for a reading of Spinoza; there is also the issue of what Spinoza can do for the notion of lifeform.
+There are some good reasons to see something like this lifeform concept as being at work in Spinoza's system (even though he doesn't use the term itself\footnote{I use \enquote{lifeform} here \dash a term that Spinoza never uses \dash because this chapter is ultimately concerned with the action-theoretic context. To the extent to which my reading works for lifeform, though, it should extend more or less straightforwardly to certain senses of \enquote{species}, and somewhat less straightforwardly, \enquote{form} \dash terms that Spinoza does \emph{occasionally} use in appropriate contexts.}), especially when he makes claims such as, \textquote[E4App\RN{9}]{\textins*{n}othing can agree more with the nature of any thing than other individuals of the same species}, or many of his references to \enquote{form}. But Spinoza denies real universals, denies that commonalities pertain to the essences of singular things (E2P37), and endorses gradualism about bodies (i.e., there are no hard boundaries between natural kinds, and seemingly no ontological resources to institute them).
 
-Work on lifeforms in philosophy usually starts from a broadly Aristotelian framework, and usually assumes some non-trivial degree of essentialism: humans do humane things becomes of some underlying essential human lifeform; sharks do sharkish things because of some underlying essential shark lifeform; etc. Analysis of action in terms of lifeform is useful, but it would be nice if it could come without essentialist commitments attached. Spinoza's gradualism undermines essentialism. This is precisely the reason that the role played by lifeforms in his system is so difficult to pin down: intuitively, lifeforms seem as though they should entail essence; to seek them out in a non-essentialist context seems like a category mistake. So if Spinoza does indeed have a coherent conception of lifeform that is capable of playing an appropriate action-theoretic role, it breaks the expected entailment from lifeform to essence. And, if so, Spinoza gives us a non-essentialist way of addressing and employing lifeforms. For exactly the reason that the issue of lifeform in Spinoza's system is tricky, it is productive.
+So there is some puzzle about the role of something like a lifeform in what we might broadly, and maybe inaccurately, call Spinoza's philosophy of action \dash a puzzle that warrants addressing. That's an issue of what the notion of lifeform can do for a reading of Spinoza; there is also the issue of what Spinoza can do for the notion of lifeform.
 
-What are the features of a non-essentialist notion of lifeform?\todo{Fill out}
+Work on lifeforms in philosophy usually starts from a broadly Aristotelian (or, in some cases, Hegelian) framework, and usually assumes some non-trivial degree of essentialism: humans do humane things becomes of some underlying essential human lifeform; sharks do sharkish things because of some underlying essential shark lifeform; etc. Analysis of action in terms of lifeform is useful, but it would be nice if it could come without essentialist commitments attached.
 
-In the Aristotelian framework, you get lifeforms for free, as part of the basic ontology. Consequently, you don't need to find something else to which to reduce them. In a mechanistic framework, by contrast, you won't find lifeforms anywhere within the fundamental ontology: you have to build them out of more fundamental entities; whatever a lifeform is, it's going to have to be reducible to something else. The obvious place to look for a reductionist account is morphology.
+Spinoza's commitments to gradualism and merely nominal universals more or less rule out essentialism for something-like-a-lifeform. This is precisely the reason that the role played by lifeforms in Spinoza's system is so difficult to pin down: intuitively, lifeforms seem as though they should entail essence; to seek them out in a non-essentialist context seems like a category mistake. So if Spinoza does indeed have a coherent conception of lifeform that is capable of playing an appropriate action-theoretic role, it breaks the expected entailment from lifeform to essence. And, if so, Spinoza gives us a non-essentialist way of addressing and employing lifeforms. For exactly the reason that the issue of lifeform in Spinoza's system is tricky, it is a valuable resource.
 
-I am also not going to go into the much broader issue of essences in general in Spinoza's system. The question at stake in this chapter is, if there is something like a lifeform, in particular, in the system, what does it consist in? What can we point to in the world and say \enquote{that right there: that's a lifeform}? There are two gotchas in trying to answer that question. One is Spinoza's denial of real universals: there is no entity that is distributed throughout all humans that makes them human. So, if we are to find a lifeform, we can find it only in the particulars. Second, there is Spinoza's gradualism about bodies: all change happens along a continuum, with no hard boundaries between one kind of body and another; that is, there are no real natural kinds of body. This is a problem because the obvious answer to the question of lifeform would be something about the morphology of bodies, but if the morphology of bodies is continuous, it is not clear what ontological resources there could be to build up a sufficiently robust notion of lifeform on that basis.
+% What are the features of a non-essentialist notion of lifeform?\todo{Fill out}
+\section{Grounding lifeforms}\label{sec:GroundingLifeforms}
 
-The most likely candidates for a morphological reading seem to be morphological complexity\todo{Add ref.} or extrinsic denomination. The former seems insufficiently robust (especially for the sake of the explanatory role that lifeform takes in action theory and ethics): what determines the degree of complexity at which one lifeform turns into another? This is the gradualism problem in a nutshell. The extrinsic option has the advantage of embracing the ad-hocness that would undermine a complexity account: I can stipulate that things that look roughly roughly like \emph{this} \dash say, have two legs and no feathers \dash are humans; you might disagree. In which case, the grouping under the lifeform \enquote{human} itself is grounded in my mind rather than in humans themselves. This might well be perfectly adequate for analytical means \dash pragmatic groupings can be useful analytic tools \dash but insufficient for lifeforms, understood in this way, to have an explanatory role: we cannot say $x$ $\phi$s \emph{because} it is human, if our criteria for grouping $x$ as human bottom out at \enquote{because I said so}.
+In the Aristotelian framework, you get lifeforms for free, as part of the basic ontology. Consequently, you don't need to find something else to which to reduce them. In a more austere framework like Spionoza's, by contrast, you won't find anything like lifeforms anywhere within the fundamental ontology: you have to build them out of more fundamental entities; whatever a lifeform is, it's going to have to be reducible to something else.
 
-I am not going to argue that there is no workable way whatsoever to ground a notion of lifeform in morphology for Spinoza; indeed Tropper's chapter\todo{I think! I haven't read the latest version yet. Sorry, Sarah, if I'm making stuff up here} in this volume goes somewhat in that direction. Rather, I am going to argue for an alternative possibility: there are useful resources for grounding lifeform to be found in activities \dash the stuff that singular things \emph{do} \dash and an activities-grounded reading fits well with the textual evidence and the ways in which Spinoza employs something-like-a-lifeform. Moreover, and ultimately more germane to my purposes here, an activities-grounded reading allows for a non-essentialist conception of lifeform, in which lifeforms get to be real and non-trivial aspects of the world, while still being fundamentally mutable.
+The obvious place to look for a reductionist account is morphology \dash something about the structure of bodies gives them the kind of lifeform they have. This accords with intuitions about, e.g., opposable thumbs and light bulbs. It also fits with Spinoza's explanation of \textquote[E2p13s]{the difference between the human mind and the others, and how it surpasses them} in terms of the complexity of the human body: there's seemingly something about the constitution of the human body that differentiates humans from other lifeforms.
 
-It might seem strange to ground something like lifeform in something like activity. Typically, we think of activities as derivatives of more fundamental entities. We tend to think of them as \emph{changes} in \emph{bodies}, and we tend to think that the bodies persist while their activities change. On this understanding, activities are both ontologically posterior to bodies and, more or less, ephemeral, making them a seemingly rather poor choice as grounds for anything much at all. More specifically, and perhaps tellingly, we tend to think of activities as \dash or on the model of \dash modes of substances. If we think of bodies as substances, then of course we would expect bodies to be grounds. And, if a lifeform is some kind of constraint to activity, of course the notion of activities as grounds would look incoherent. Within a lot of frameworks, the substantival model of body–activity relations is apt enough: it obviously works for the Aristotelian framework, is canonical for the Cartesian framework, and seems to track most materialisms and physicalisms.
+The most likely candidates for a morphological reading seem to be either morphological complexity or extrinsic denomination (i.e., as the \textquote[E4Pref; G \RN{2}/208]{model of human nature which we may look to}). The former seems insufficiently robust (especially for the sake of the explanatory role that lifeform takes in action theory and ethics): what determines the degree of complexity at which one lifeform turns into another? This is the gradualism problem in a nutshell.\footnote{Arguably, Spinoza could get one lifeform \dash the human lifeform \dash out of complexity, as its upper limit (or two, if we also count the lower limit as a lifeform), without falling prey to the gradualism problem \dash assuming that there is a way for the bounds of complexity to be determinable. Presumably, they would have to be determined relatively, as the most (or least) complex amongst all actual things. But, (a) complexity, even when couched in terms of being capable of \textquote[E2p13s]{doing many things at once, or being acted on in many ways at once}, is multifarious, and sufficient reason would have to be found for preferring one form of complexity over others. Moreover (b), any given human is going to differ to some extent in complexity from any other, such that, even if an upper limit to complexity can be determined, it will only pick out one individual. If we want a shared lifeform, we're back to appealing to an underdetermined region in the complexity continuum.} It also contravenes Spinoza's proscription of commonalities in the essences of singular things.
 
-It's not clear, though, that this is an intuition that ought to apply to Spinoza's system, where bodies and activities are equally modal. While an argument could presumably be made that (modal) activities are still supposed to be only derivative of (modal) bodies, there does not seem to be anything in Spinoza's system to compel that reading, beyond trying to preserve our intuitions; nor does there seem to be much to support such a reading. Indeed, if conatus is understood dynamically, then such priority relations cannot obtain (see \cref{sec:Agreement}). Consequently, for the sake of this chapter, I'll assume that bodies and activities are modes fundamentally on the same level, and that, whatever a lifeform might be, it can just as plausibly be grounded in activity as in body.
+The extrinsic option has the advantage of embracing the ad-hocness that would undermine a complexity account: I can stipulate that things that look roughly roughly like \emph{this} \dash say, have two legs and no feathers \dash are humans; you might disagree. In which case, the grouping under the lifeform \enquote{human} itself is grounded in my mind rather than in humans themselves. This might well be perfectly adequate for analytical means \dash pragmatic groupings can be useful analytic tools \dash but insufficient for lifeforms, understood in this way, to have an explanatory role: we cannot say $x$ $\phi$s \emph{because} it is human, if our criteria for grouping $x$ as human bottom out at \enquote{because I said so}.
 
-Trying to talk about what something \emph{does} is oddly tricky in Spinoza's system. Spinoza talks about \enquote{actions}, but, strictly speaking, Spinozistic actions can only be \enquote{doings} that are grounded in reason; \enquote{action} is too narrow a category for my purposes here. Conceptually, \enquote{motions} would probably do the job, but the term is intuitively jarring: intuitively, we tend to think of motion purely in terms of local motion; this chapter is about more than just local motion, so what's \emph{connoted} is again too narrow, even if \enquote{motion} does denote the correct set of things in principle. It's for these reasons that I've gone with \enquote{activities}. By \enquote{activity}, I mean simply what things do, or modal change, and I mean to avoid the restrictive implications of \enquote{actions} and \enquote{motions}, while incurring as little linguistic awkwardness as possible.
+I am not going to argue that there is no workable way whatsoever to ground a notion of lifeform in morphology for Spinoza; indeed Tropper's chapter\todo{I think! I haven't read the latest version yet. Sorry, Sarah, if I'm making stuff up here} in this volume goes somewhat in that direction. Rather, I am going to argue for an alternative possibility: there are useful resources for grounding lifeform to be found in activities \dash the stuff that singular things \emph{do} \dash and an activities-grounded, or activity-priority, reading fits well with the textual evidence and the ways in which Spinoza employs something-like-a-lifeform. Moreover, and ultimately more germane to my purposes here, an activity-priority reading is exactly the sort of reading that allows for a realist, non-essentialist conception of lifeform, in which lifeforms get to be real and non-trivial aspects of the world, while still being fundamentally mutable.
+
+Trying to talk about what something \emph{does} is oddly tricky in Spinoza's system. Spinoza talks about \enquote{actions}, but, strictly speaking, Spinozistic actions can only be \enquote{doings} that are grounded in reason; \enquote{action} is too narrow a category for my purposes here. Conceptually, \enquote{motions} would probably do the job, but the term is intuitively jarring: intuitively, we tend to think of motion purely in terms of local motion; this chapter is about more than just local motion, so what's connoted is again too narrow, even if \enquote{motion} does denote the correct set of things in principle. It's for these reasons that I've gone with \enquote{activities}. By \enquote{activity}, I mean simply what things do, or modal change, and I mean to avoid the restrictive implications of \enquote{actions} and \enquote{motions}, while incurring as little linguistic awkwardness as possible.
+
+It might seem strange to ground something like lifeform in something like activity. Typically, we think of activities as derivatives of more fundamental entities. We tend to think of them as \emph{changes} in \emph{bodies}, and we tend to think that the bodies persist while their activities change. On this understanding, activities are both ontologically posterior to bodies and, more or less, ephemeral, making them a seemingly rather poor choice as grounds for anything much at all.
+
+More specifically, and perhaps tellingly, we tend to think of activities as \dash or on the model of \dash modes of substances. If we think of bodies as substances, then of course we would expect bodies to be grounds. And, if a lifeform is some kind of constraint to activity, of course the notion of activities as grounds would look incoherent. Within a lot of frameworks, the substantival model of body–activity relations is apt enough: it obviously works for the Aristotelian framework, is canonical for the Cartesian framework, and seems to track most materialisms and physicalisms.
+
+It's not clear, though, that this is an intuition that ought to apply to Spinoza's system, where bodies and activities are equally modal. While an argument could presumably be made that (modal) activities are still supposed to be only derivative of (modal) bodies, such that there are necessary and consistent intramodal priority relations between bodies and activities, there does not seem to be anything in Spinoza's system to compel that reading; nor does there seem to be much to support such a reading, beyond trying to preserve our intuitions. Indeed, if conatus is understood dynamically, then such priority relations cannot obtain (see \cref{sec:Agreement}). Consequently, for the sake of this chapter, I'll assume that bodies and activities are modes fundamentally on the same level, and that, whatever a lifeform might be, it can just as plausibly be grounded in activity as in body.
+
+% I am also not going to go into the much broader issue of essences in general in Spinoza's system. The question at stake in this chapter is, if there is something like a lifeform, in particular, in the system, what does it consist in? What can we point to in the world and say \enquote{that right there: that's a lifeform}? There are two gotchas in trying to answer that question. One is Spinoza's denial of real universals: there is no entity that is distributed throughout all humans that makes them human. So, if we are to find a lifeform, we can find it only in the particulars. Second, there is Spinoza's gradualism about bodies: all change happens along a continuum, with no hard boundaries between one kind of body and another; that is, there are no real natural kinds of body. This is a problem because the obvious answer to the question of lifeform would be something about the morphology of bodies, but if the morphology of bodies is continuous, it is not clear what ontological resources there could be to build up a sufficiently robust notion of lifeform on that basis.
 
 There are at least two, related, issues raised by this use of \enquote{activity}. First, if an activity is what something does, this sounds suspiciously substantival: there is some \emph{thing} that does some \emph{activity}. If what we're concerned with is specifically the activity \emph{of} things, then the things look very much as though they ought to be the grounds again. Here, I argue that, while particular activities are necessarily in relation with particular bodies, and while the particularity of both is salient to the role of lifeform, this does not in any way mean that the bodies involved have ontological priority over the activities involved.
 
@@ -68,7 +79,7 @@ The second issue is that, if the term \enquote{activity} allows for a wider scop
 \section{Lifeform and agreement}\label{sec:Agreement}
 Spinoza uses something like a notion of lifeform most explicitly in Part Four of the \texttitle{Ethics}, in the context of the discussion of inter-human relations. In the appendix to Part Four, he claims that \blockquote[E4app\RN{9}]{\textins*{n}othing can agree \textins{\foreign{latin}{convenire}} more with the nature of any thing than other individuals of the same species}. A natural reading of this passage \dash that is, a natural reading given substantivalist intuitions \dash might be that there is some phenomenon called \enquote{agreement} that is grounded in some property called \enquote{species}: on this reading, \enquote{species} preexists, and is more fundamental than, \enquote{agreement}, such that we can have species without actual agreement (say, if the members of the species are dispersed here and there without meeting).
 
-What I am proposing here is an inversion of the grounding relations in the above reading: it's not that species grounds agreement; rather, agreement is what grounds species. To (metaphysically) explain what species \dash or, in the terms I'm using here, lifeform \dash is, we look to agreement, rather than the other way around. Read in this way, Spinoza's point is not that these particular things agree most with each other because they are all elements of the same species-set, but that they are elements of a set of things \emph{that} maximally agree: membership status is established in terms of agreement, and a lifeform just is a set of things that maximally agree (in some as-yet-unspecified way). This is what an agreement-priority conception of lifeform consists in.
+What I am proposing here is an inversion of the grounding relations in the above reading: it's not that species grounds agreement; rather, agreement is what grounds species. To (metaphysically) explain what species \dash or, in the terms I'm using here, lifeform \dash is, we look to agreement, rather than the other way around. Read in this way, Spinoza's point is not that these particular things agree most with each other because they are all elements of the same species-set, but that they are elements of the same set of things just \emph{because} they maximally agree: membership status is established in terms of agreement, and a lifeform just is a set of things that maximally agree (in some as-yet-unspecified way). This is what an agreement-priority conception of lifeform consists in.
 
 Below, I argue that we can define agreement in terms of usefulness, such that we can identify the members of a species or  lifeform as those singular things for which a given set of activities is maximally useful: Let's say that there are some activities, performed in certain ways, that are more useful to me than others are; those activities constitute my lifeform. And if the same activities are also of maximal utility to you, then we share a lifeform.
 
@@ -80,10 +91,8 @@ What E4app\RN{9} is summarising is E4p35c1: \blockquote[E4p35c1]{what is most us
 
 Now, admittedly, (a) does, on the face of it, look like the more promising option in light of the text: the discussion of agreement in E4p35 is tied to reason, and reason is ultimately tied to a thing's own essence, such that, when a thing acts from reason, it acts from what's inherent to it (E3p4–7). On top of that, in the second corollary to E4p35, Spinoza explicitly equates usefulness to egoism: \textquote{\textins*{w}hen each man most seeks his own advantage for himself, then men are most useful to one another}, where a person's seeking their own advantage consists in \textquote{acting according to the laws of his own nature}. This does sound as though usefulness is being explained in terms of agreement, and agreement in terms of similarity in some pre-existing essence.
 
-However, the essence, or nature, in question here is the \enquote{actual essence} of the thing, or its conatus (E3p7).
-\footnote{I'm concerned here only with actual essence, and am leaving aside the issue of whether there is a \enquote{formal essence} beyond the actual essence. See, e.g., \cites{Laerke:2017,Nadler:2012,Ward:2011}.}
-The conatus of a thing is active and dynamic; it's the \textquote[E3p7]{power of each thing, \emph{or} the striving by which it (either alone or with others) does anything, or strives to do anything}, which is merely \enquote{distinguished by reason, or rather verbally}, and is not \textquote[CM 1/6; G \RN{1}/248; {\cite[314]{C1}}]{in any way really distinct}, from the thing, or the essence thereof, itself.
-\footnote{On the dynamic reading of the conatus, see, e.g., \cites{Williams:2019}[][Part 4, ch. 13]{RenzExplainability}}\todo{Add more refs}
+However, the essence, or nature, in question here is the \enquote{actual essence} of the thing, or its conatus (E3p7).\footnote{I'm concerned here only with actual essence, and am leaving aside the issue of whether there is a \enquote{formal essence} beyond the actual essence. See, e.g., \cites{Laerke:2017,Nadler:2012,Ward:2011}.}
+The conatus of a thing is active and dynamic; it's the \textquote[E3p7]{power of each thing, \emph{or} the striving by which it (either alone or with others) does anything, or strives to do anything}, which is merely \enquote{distinguished by reason, or rather verbally}, and is not \textquote[CM 1/6; G \RN{1}/248; {\cite[314]{C1}}]{in any way really distinct}, from the thing, or the essence thereof, itself.\footnote{On the dynamic reading of the conatus, see, e.g., \cites{Williams:2019}[][Part 4, ch. 13]{RenzExplainability}}\todo{Add more refs}
 
 The point here is that a thing's actual essence is not ontologically distinct from its activity: there is no pre-existing essence that subsequently determines activity; rather, acting in such-and-such a way just is having such-and-such an essence, and having such-and-such an essence just is acting in such-and-such a way. In which case, the actual essence cannot be ontologically, or logically, prior to the activity, and neither of the two can be \emph{the} explanation of the other \dash what you are does explain what you do, but only insofar as what you do explains what you are.
 
@@ -99,10 +108,8 @@ From E3p7, we can say that a thing's actual essence and its conatus are identica
 
 Perhaps this doesn't sound very helpful: we were looking to usefulness and agreement as means to ground a notion of lifeform, and we ended up with the actual essence of a singular thing, and with a whole lot of seemingly useful distinctions being eroded into identity. In other words, we seem to be right back at the problem of how to build up a notion of lifeform when all the available ontological resources are singular things.
 
-However, just because some things are really identical, that doesn't mean that the rational distinctions between them are uninformative.
-\footnote{A distinction of reasoned reason would be genuinely explanatory; a distinction of reasoning reason, merely analytic. Given Spinoza's \textquote[CM 1/6; G \RN{1}/248; {\cite[314]{C1}}]{or rather verbally} comment, the latter seems the more likely option. Both should, I think, work here regardless.}
-If we talk purely in terms of a singular thing's actual essence, say, we seem to be talking about something purely intrinsic. The same might, maybe somewhat less easily, be said of conatus.
-\footnote{A dynamic conception of conatus rules out exactly this ascription of pure intrinsicality: \textcquote[123]{Williams:2019}[.]{the \emph{conatus} principle is an essential characteristic of \emph{all} things and is most usefully conceived \emph{outside} the subject, in the wider context of an ontology of relation} Understood dynamically, conatus has unrestricted arity; understood statically, it is nullary (see \cref{fn:Arity}).}
+However, just because some things are really identical, that doesn't mean that the rational distinctions between them are uninformative.\footnote{A distinction of reasoned reason would be genuinely explanatory; a distinction of reasoning reason, merely analytic. Given Spinoza's \textquote[CM 1/6; G \RN{1}/248; {\cite[314]{C1}}]{or rather verbally} comment, the latter seems the more likely option. Both should, I think, work here regardless.}
+If we talk purely in terms of a singular thing's actual essence, say, we seem to be talking about something purely intrinsic. The same might, maybe somewhat less easily, be said of conatus.\footnote{A dynamic conception of conatus rules out exactly this ascription of pure intrinsicality: \textcquote[123]{Williams:2019}[.]{the \emph{conatus} principle is an essential characteristic of \emph{all} things and is most usefully conceived \emph{outside} the subject, in the wider context of an ontology of relation} Understood dynamically, conatus has unrestricted arity; understood statically, it is nullary (see \cref{fn:Arity}).}
 But all this becomes far harder to treat as purely intrinsic if we are looking through the lens of usefulness, agreement, or even the good, all of which seem to have non-trivial relational dependencies \dash \emph{this other thing} is useful to me, agrees with me, or is good for me.
 
 \section{Maximality and mutuality}\label{sec:Mutuality}
@@ -111,15 +118,14 @@ In Spinoza's strong statement of something-like-a-lifeform in E4p35, he focuses 
 
 This much is already implied in the emphasis on agreement in E4p35. But it comes out more explicitly in the scholium, where Spinoza switches to a focus on the passive side of things, specifically in the context of human society and the interactions it entails. He points out that \textquote{the society of our fellow men} is useful to us (we get \textquote{many more advantages than disadvantages} from it), and that, \blockquote[][.]{\textins*{m}en still find from experience that by helping one another they can provide themselves much more easily with the things they require, and that only by joining forces can they avoid the dangers which threaten on all sides \dash not to mention that it is much preferable and more worthy of our knowledge to consider the deeds of men, rather than those of the lower animals} The sociality illustrated here, along with the underscoring of the passive element, is already present in the account of the conatus in E3p7, where Spinoza mentions \textquote[E3p7d; my emphasis]{\textelp{} the striving by which it (either alone \emph{or with others}) does anything}. Of those activities done by singular things, some agree with me, insofar as they are useful to me.
 
-It is not that I do certain activities from my own inherent nature, that other humans do certain activities from their own inherent natures, and that there is some shared set of properties, underlying our individual natures, that constitutes a general human nature, such that our actions are done independently but happen to agree because they derive from that shared nature.
-\footnote{\label{fn:Arity}As \citeauthor{Illari&Williamson:2013}, writing in a different context, put it, activities have \textcquote[72]{Illari&Williamson:2013}{unrestricted arity} \dash they can be applied to however-many operands. Spinozistic lifeforms seemed to have similarly unrestricted arity; things acting in isolation from purely inherent natures, on the other hand, would be nullary.}
+It is not that I do certain activities from my own inherent nature, that other humans do certain activities from their own inherent natures, and that there is some shared set of properties, underlying our individual natures, that constitutes a general human nature, such that our actions are done independently but happen to agree because they derive from that shared nature.\footnote{\label{fn:Arity}As \citeauthor{Illari&Williamson:2013}, writing in a different context, put it, activities have \textcquote[72]{Illari&Williamson:2013}{unrestricted arity} \dash they can be applied to however-many operands. Spinozistic lifeforms seemed to have similarly unrestricted arity; things acting in isolation from purely inherent natures, on the other hand, would be nullary.}
 Rather, some activities agree with me, and just insofar as some things produce those activities, and just insofar as I produce equivalently useful activities for those things, those things and I share a nature, or participate in the same lifeform.
 
 Of course we \dash and I'll restrict the phrasing to the human case here, for the sake of clarity, but the same should apply for any singular thing with a lifeform \dash are acted upon by a multitude of different things. Many, probably most, of those things are going to be non-human: just because a thing is useful to me, that doesn't mean we share a lifeform. Many things \dash water when I'm dehydrated, a blanket when it's cold \dash seem to be good for me without, I take it, sharing my lifeform. So while everything that acts on me will presumably have to be involved in my own essence, a non-vacuous notion of lifeform will need to be more restrictive.
 
 I take it that instituting such restrictions is precisely what's going on in passages such as the discussion in E4p35: what gets included in the human lifeform are those things for which a particular set of activities is most useful. Thus, all those singular things for which humane activities are most useful are what we call \enquote{human}. By contrast, a blanket is very useful for keeping me warm, which is indeed a very useful thing to do, but its usefulness doesn't extend much beyond that; having only a limited degree of usefulness to me, of agreement with me, the blanket doesn't share my lifeform.
 
-Furthermore, I don't offer much utility to a blanket; if I happen to further its conatus, that is more or less incidental (there's little I do for a blanket \dash perhaps I wash it from time to time, but that's probably more to its own detriment than anything, damaging its fibres and its weave until it eventually falls apart). Humans, on the other hand, are precisely those things for which I can do a lot that's useful, and which can do a lot that's useful for me \dash not becomes of some prior essence, but because, on this conception, humans are defined as \emph{whatever fits that description}.
+Furthermore, I don't offer much utility to a blanket; if I happen to further its conatus, that is more or less incidental (there's little I do for a blanket \dash perhaps I wash it from time to time, but that's probably more to its own detriment than anything, damaging its fibres and its weave until it eventually falls apart). Humans, on the other hand, are precisely those things which do a lot that's useful for me, and for which I do a lot that's useful\footnote{Which is absolutely not to say that I, specifically, am a great boon to humanity (or rather, any greater than anyone else, since any human is effectively defined as that which is a boon to humanity) \dash just that the things I do qua human are things that are useful to humans. The more natural way to express this would be in terms of what I, or humans, \emph{can} do, but that phrasing would imply that capacities are at stake; for an activity-priority reading to work, it has to rely on actual activities.} \dash not becomes of some prior essence, but because, on this conception, humans are defined as \emph{whatever fits that description}.
 
 There are cases of greater mutual usefulness than in the blanket case. Humans might well interact with, say, trees, and might well do so in broadly mutually beneficial ways (trees might provide humans with fruit or wood, or simply oxygen; humans might plant or graft trees, and protect them from disease, and, by eating their fruit, distribute their seeds; and so on). The case is somewhat less asymmetrical as compared to the blanket case, but the utility of trees for humans is still within a fairly restricted domain, so tree-ish activities are unlikely to be maximally useful to humans. By the same token, humane activities are probably not going to be maximally useful to trees (we cut them down to obtain material that's useful to us, after all).
 
